--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <link href="style.css" rel="stylesheet">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
  
+ 
 </head>
 
 <body>
@@ -25,14 +26,69 @@
 </header>
 
 <main>
-	<div id="silk_background"></div>
+	<!-- <div id="silk_background"></div> -->
 
     <div id="site_discription">
         
         <h1>Rabyray Dev</h1>
-		<h2>Мы предоставляем услуги</h2>
+        <div class="description_services"><p>
+            При разработке сайта решаем задачи бизнеса в первую очередь. Беремся за сложные и нестандартные проекты. Для простых находим интересные решения. Вы можете заказать у нас сайт любого масштаба (от «визитки» до корпоративного портала или интернет-магазина с интеграцией 1C, установкой систем сквозной аналитики, CRM и т. д.).
+       </p>
+       <p>
+            Мы осуществляем полный спектр услуг по разработке сайтов: от анализа конкурентов и разработки фирменного стиля до индивидуальной отрисовки и реализации сайтов любой сложности на 1С Bitrix и других CMS. Мы занимаемся интеграцией со сторонними сервисами, предоставляем дальнейшую техническую поддержку проекта и помогаем привлекать клиентов с помощью контекстной рекламы, SEO-продвижения и других маркетинговых инструментов.
+       </p>
+       <h2>
+       Для кого актуально создание сайта?</h2>
+       <ul>
+           <li>
+           <div>
+        <strong>
+               Малый и средний бизнес: </strong>
+               Для компаний, стремящихся расширить аудиторию, повысить узнаваемость бренда и улучшить взаимодействие с клиентами.
+           </div>
+        </li>
+           <li>
+           <div>
+        <strong>
+               Корпорации: </strong>
+               Для крупных компаний, которым нужны масштабируемые решения, такие как корпоративные порталы и интеграции с внутренними системами.
+           </div>
+        </li>
+           <li>
+           <div>
+        <strong>
+               Интернет-магазины: </strong>
+               Для торговых компаний, желающих создать удобные платформы для онлайн-продаж с функциями управления запасами и платежами.
+           </div>
+        </li>
+           <li>
+           <div>
+        <strong>
+               Стартапы: </strong>
+               Для новых бизнесов, которые хотят быстро выйти на рынок с современным веб-присутствием.
+           </div>
+        </li>
+       </ul></div>
+
+       <div class="obr_connect">
+        <form class="obratnuj-zvonok" autocomplete="off" action='email.php' method='post'>
+            <div class = "form-zvonok"> 
+                <div>
+                    <label>Имя<span>*</span></label>
+                    <input type = 'text' name = 'username' required ></div >
+                <div>
+                    <label>Номер телефона(с кодом)<span>*</span></label>
+                    <input type='text' name='usernumber' required></div>
+                <div>
+                    <label>Сообщение</label>
+                    <input type='text' name='question'>
+                </div>
+                <input class = "bot-send-mail" type = 'submit' value = 'Послать заявку'>
+            </div>
     </div>
 
+
+    
 
 <div onclick="show('none')" id="gray"></div>
 <div id="window">    
